--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -9,6 +9,9 @@
   padding: 2rem 4rem;
 
   border-bottom: 1px solid var(--gray-100);
+  img{
+    cursor: pointer;
+  }
 
   p{
     margin-left: 2rem;
