--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -3,7 +3,7 @@
   width: 26.5rem;
   height: 100vh;
 
-  background: var(--purple-500);
+  background: #963831;
   color: var(--white);
 
   display: flex;
@@ -36,7 +36,7 @@
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
-  background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0)100%);
+  background: linear-gradient(143.8deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0)100%);
   padding: 4rem;
   text-align: center;
 
@@ -60,7 +60,7 @@
     .emptySlider{
       width: 100%;
       height: 4px;
-      background: var(--purple-300);
+      background: var(--white);
       border-radius: 2px;
     }
   }
