--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,10 +26,10 @@
 
   --green-500: #04D361;
 
-  --purple-300: #9F75FF;
-  --purple-400: #9164FA;
-  --purple-500: #8257E5;
-  --purple-800: #6F48C9;
+  --purple-300: #070608e8;
+  --purple-400: #2e2a38;
+  --purple-500: #373244;
+  --purple-800: #1e1a27;
 }
 
 body {
