--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,5 +1,6 @@
 .headerContainer{
-  background: var(--white);
+  background: rgb(233,233,237);
+  background: linear-gradient(90deg, rgba(233,233,237,1) 0%, rgb(214, 214, 218) 35%, rgb(233,233,237)100%);
   height: 6.5rem;
 
   display: flex;
