--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -3,7 +3,8 @@
   width: 26.5rem;
   height: 100vh;
 
-  background: #963831;
+  background: rgb(251,63,160);
+  background: radial-gradient(circle, rgba(251,63,160,1) 0%, rgba(19,15,18,1) 100%);
   color: var(--white);
 
   display: flex;
@@ -24,7 +25,8 @@
 
   footer{
     align-self: stretch;
-    &.empty{
+
+    &.empty .progress{
       opacity: 0.5;
     }
   }
@@ -99,10 +101,17 @@
 
     &:disabled{
       cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled){
       filter: brightness(0.6);
+    }
+    &.isActive{
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+    }
+    &.isActive:hover{
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
     }
     &.playButton{
       width: 4rem;
